# talent-mobility

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  better_sense_schema.sql  compose.yaml  entrypoint.sh  openapi.yaml  pyproject.toml  pytest.ini  sample.env  setup.cfg
.github/workflows/: ci.yml
app/: celery_app.py  main.py  settings.py  worker_healthcheck.py
app/db/: __init__.py  candidate_profile.py  case.py  consent.py  data_embeddings.py  decision.py  evidence_request.py  internal_mobility_request.py  learning_proposal.py  outcome_checkpoint.py  plan.py  run_ai_matches.py  task.py  users_hris_details.py
app/models/: candidate_profile_data.py  consent.py  decision_review.py  match_run.py  outcomes.py  plan.py  role_request.py
app/prompt/: candidate_profile.py
app/routers/: ai_matches.py  candidate_profiles.py  internal_mobility_requests.py  mobility_candidate.py  mobility_case.py  mobility_compare.py  mobility_consent.py  mobility_decision.py  mobility_outcomes.py  mobility_plan.py  mobility_shortlist.py  mobility_tracking.py  sample_writing_assistant.py  user_directory.py
app/services/: candidate_mapping.py  consent_seed.py  matching.py  outcomes_view.py  plan_generation.py  synthesis.py  tracking_view.py
app/utils/: common.py  embedding.py  exceptions.py  llm_proxy.py  logs.py
app/worker/: tasks.py
migrations/: env.py  script.py.mako
migrations/versions/: 202607141200_create_better_sense_schema_tables.py
tests/: conftest.py  test_health.py  test_matching.py
