[tool.poetry]
name = "internal-mobility-matching"
version = "0.1.0"
description = ""
authors = [
    "Bhavesh Vaviya <bhavesh.vaviya@betterworks.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "0.111.0", extras = ["all"]}
uvicorn = "^0.32.1"
starlette = "0.37.2"
structlog = "^23.1.0"
pydantic = "^2.10.3"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
